--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ packages = [
 python = "^3.10"
 pyasic = { path = "./pyasic/", develop = true }
 pyasic_api = { path = "./pyasic_api/", develop = true }
+pre-commit = "^2.20.0"
+mkdocs = "^1.4.2"
+mkdocstrings = "^0.19.0"
 
 
 
