--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pyasic_api = { path = "./pyasic_api/", develop = true }
 pre-commit = "^2.20.0"
 mkdocs = "^1.4.2"
 mkdocstrings = "^0.19.0"
+fastapi = {extras = ["uvicorn"], version = "^0.85.2"}
 
 
 
