--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,12 @@ pyasic_api = { path = "./pyasic_api/", develop = true }
 pre-commit = "^2.20.0"
 mkdocs = "^1.4.2"
 mkdocstrings = "^0.19.0"
-fastapi = {extras = ["uvicorn"], version = "^0.85.2"}
-
+isort = "^5.10.1"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
