add config util to submodules, as it is very useful for testing new code.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pyasic_api"]
 	path = pyasic_api
 	url = https://github.com/UpstreamData/pyasic_api
+[submodule "upstream_config_util"]
+	path = upstream_config_util
+	url = https://github.com/UpstreamData/upstream_config_util
