--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,15 @@ authors = ["UpstreamData <brett@upstreamdata.ca>"]
 readme = "README.md"
 packages = [
     {include = "pyasic"},
-    {include = "pyasic_api"}
+    {include = "pyasic_api"},
+    {include = "cfg_util"},
 ]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 pyasic = { path = "./pyasic/", develop = true }
 pyasic_api = { path = "./pyasic_api/", develop = true }
+cfg_util = { path = "./upstream_config_util/", develop = true}
 pre-commit = "^2.21.0"
 mkdocs = "^1.4.2"
 mkdocstrings = "^0.19.1"
