Add pyasic_web as a submodule to pyasic-super and make some changes for setup.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "upstream_config_util"]
 	path = upstream_config_util
 	url = https://github.com/UpstreamData/upstream_config_util
+[submodule "pyasic_web"]
+	path = pyasic_web
+	url = https://github.com/UpstreamData/pyasic_web
