--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,15 +16,14 @@ python = "^3.8"
 pyasic = { path = "./pyasic/", develop = true }
 pyasic_api = { path = "./pyasic_api/", develop = true }
 pyasic_web = { path = "./pyasic_web/", develop = true }
-upstream_config_util = { path = "./upstream_config_util/", develop = true, python = ">=3.8" }
-pre-commit = "^3.2.2"
-mkdocs = "^1.4.2"
+upstream_config_util = { path = "./upstream_config_util/", develop = true }
+pre-commit = "^3.5.0"
+mkdocs = "^1.5.3"
 mkdocstrings = {extras = ["python"], version = "^0.20.0"}
 isort = "^5.12.0"
-cx-Freeze = "^6.14.9"
+cx-Freeze = "^6.15.10"
 asynctest = "^0.13.0"
-djlint = "^1.25.0"
-httpx = "^0.24.1"
+djlint = "^1.34.0"
 
 [build-system]
 requires = ["poetry-core"]
